🏗️ WIP: Tryin to fix issue where content-api breaks on Netlify

--- a/nuxt/assets/style/blockquotes.styl
+++ b/nuxt/assets/style/blockquotes.styl
@@ -65,6 +65,7 @@ blockquote
   &.warning
     &:before
       content: "warning"
+      color: #212121
 
   &.skully
     color: #FFF
