--- a/nuxt/assets/style/freesewing.styl
+++ b/nuxt/assets/style/freesewing.styl
@@ -246,18 +246,20 @@ ul.expansion-panel
 /* New look */
 .fs-pad
   padding: 1rem 2rem
+.fs-xpad
+  padding: 0 2rem
+
+.fs-ypad
+  padding: 1rem 0
 
 @media (max-width: 599px)
   .fs-pad
     padding: 1rem 8px
   .container
     padding: 8px
+  .fs-xpad
+    padding: 0 8px
 
-.fs-xpad
-  padding: 0 2rem
-
-.fs-ypad
-  padding: 1rem 0
 
 .fs-content
   background: #fff
